@startuml
skinparam classAttributeIconSize 0
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0

class GreenSpace {
    greenSpaceType
    name
    area
    emailGSM

}

class GreenSpaceDTO {

    date
    greenSpace
    description
    expectedDuration
    urgencyDegree
    entryStatus
    associatedTeam
    associatedVehicles

}

class SystemUser {
    name
    email
    password
    phone
}


class GreenSpaceRepository {
    - ArrayList<GreenSpace> greenSpaceList
    +getGreenSpaceList(authenticationController.getCurrentUserEmail())

}

class Repositories {
    - greenSpaceRepository

    - Repositories()
    + getInstance()
    + getGreenSpaceRepository()

}

class GreenSpaceMapper {

       + toDTOList(greenSpaceListGSM)

}


class ListGreenSpacesController {
    - GreenSpaceRepository GreenSpaceRepository
    - GreenSpaceMapper GreenSpaceMapper


    +getGreenSpaceDTOsList()
    +sortGreenSpaces(greenSpaceDTOsList)

}

class GreenSpaceUI {

}


interface SortingAlgorithm {
    + sort(GreenSpaceDTOlist)
}

class BubbleSort implements SortingAlgorithm {
    + sort(GreenSpaceDTOlist)
}

class SelectionSort implements SortingAlgorithm {
    + sort(GreenSpaceDTOlist)
}


class ApplicationSession{
    -authenticationRepository: AuthenticationRepository
        -emailService: SortingAlgorithm
        -CONFIGURATION_FILENAME
        -COMPANY_DESIGNATION

        -getProperties(): Properties
        +getSortingAlgorithm()
}




GreenSpaceUI .> ListGreenSpacesController
ListGreenSpacesController ..> Repositories : repositories
Repositories --> "1" GreenSpaceRepository
Repositories -> Repositories : instance
ListGreenSpacesController .> GreenSpaceMapper
ListGreenSpacesController .> GreenSpace
ListGreenSpacesController --> GreenSpaceRepository : uses

SystemUser <|- GSM


GSM "1" -- "1" GreenSpaceUI
GreenSpace "*" <-- "1" GreenSpaceRepository : stores
GSM"1" -- "*" GreenSpace: manages >
GreenSpaceDTO "*" <-- "1" GreenSpaceMapper : creates


ApplicationSession ..> SortingAlgorithm

@enduml

